# MMD

./: .dockerignore  .env.example  .gitignore  README.en.md  README.md  docker-compose.yml  multi-model-deliberation-dev-roadmap.md  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: ci.yml
apps/api/: .env.example  Dockerfile  models.config.example.json  package.json  tsconfig.json  vitest.config.ts
apps/cli/: .env.example  models.config.example.json  package.json  tsconfig.json
docs/: architecture.md  deployment.en.md  deployment.md  development.md  fusion-replacement-mainline.md  litellm-integration.md  prior-art.en.md  prior-art.md  protocol.en.md  protocol.md  roadmap.md  streaming-tools-multimodal-json.md  upstream-rfc.md  versioning.en.md  versioning.md
python/: README.md  pyproject.toml
python/examples/: litellm_config.yaml  litellm_mock_config.yaml  mmd_handler.py  proxy_smoke_handler.py
python/mmd_litellm/: __init__.py  alignment.py  client.py  consensus.py  conversation.py  cost.py  custom_handler.py  errors.py  ids.py  litellm_provider.py  mock_handler.py  orchestrator.py  policy.py  prompts.py  quorum.py  response.py  schemas.py  structured.py  tools.py  v3.py
python/scripts/: proxy_real_smoke.py  proxy_smoke.py
python/tests/: conftest.py  test_client.py  test_consensus.py  test_contract.py  test_conversation.py  test_cost.py  test_orchestrator.py  test_policy.py  test_prompts.py  test_provider.py  test_proxy_e2e.py  test_quorum.py  test_real_smoke.py  test_streaming.py  test_tools.py  test_v3_contract.py
(+208 files in other folders)
