[project]
name = "mmd-litellm"
version = "0.1.0"
description = "Auditable multi-model deliberation provider for LiteLLM."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.8",
]

[project.optional-dependencies]
litellm = [
  "litellm>=1.70",
]
proxy = [
  "litellm[proxy]>=1.70",
]
test = [
  "pytest>=8.0",
]
dev = [
  "mmd-litellm[proxy,test]",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mmd_litellm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
